dpkg (1.16.10) UNRELEASED; urgency=low

  [ Guillem Jover ]
  * Fix typos in 1.16.9 changelog entry. Closes: #691954
    Thanks to Nicolás Alvarez <nicolas.alvarez@gmail.com>.
  * Add missing @LIBLZMA_LIBS@ to Libs.Private in libdpkg.pc.in.
  * Do not use an undefined va_list variable in dpkg_put_errno().
  * Abort installation if we cannot set the security context for a file.

  [ Updated programs translations ]
  * Esperanto (Felipe Castro).
  * Spanish (Javier Fernández-Sanguino).
  * Vietnamesea (Trần Ngọc Quân). Closes: #692100

  [ Updated scripts translations ]
  * Fix mistranslation in French translation of scripts.
    Thanks to Filipus Klutiero. Closes: #698530
  * Fix typos in French translation of scripts.
    Thanks to Sylvestre Ledru. Closes: #702627
  * Fix Russian translation (wrong order of parameters
    in a string). Thanks to Andrey Rahmatullin for noticing,
    to Sven Joachim for proposing a solution and Yuri Kozlov for
    fixing the translation. Closes: #698869

 -- Guillem Jover <guillem@debian.org>  Sun, 04 Nov 2012 07:14:37 +0100

dpkg (1.16.9) unstable; urgency=low

  [ Raphaël Hertzog ]
  * Fix dpkg-source regression in "3.0 (quilt)" source packages while
    unapplying patches that remove all files in a directory. Closes: #683547
  * Fix segfault in field format parsing on empty strings, affecting
    «dpkg-query -W -f ''» and «dpkg-deb -W --showformat=''». LP: #1035512
  * Fix dpkg's French usage string which was missing the final “s“ in
    --print-foreign-architectures. Closes: #685863

  [ Guillem Jover ]
  * Use “statoverrides” instead of “statusoverrides” in dpkg-statoverride.
    Closes: #686995
  * Comment out dpkg(1) documentation about disabled --command-fd option.
    Closes: #685677
  * Cleanup dpkg-divert unit-test environment to avoid build failures.
    Closes: #687656
  * Fix update-alternatives test suite to behave correctly on non-Debian
    binary paths. Known to be affecting at least Gentoo and Mac OS X.