@@ -6,6 +6,8 @@ dpkg (1.16.10) UNRELEASED; urgency=low
   * Add missing @LIBLZMA_LIBS@ to Libs.Private in libdpkg.pc.in.
   * Do not use an undefined va_list variable in dpkg_put_errno().
   * Abort installation if we cannot set the security context for a file.
+  * Fix OpenPGP armored signature parsing, to be resilient against doctored
+    input, including source package control files. Closes: #695919
 
   [ Updated programs translations ]
   * Esperanto (Felipe Castro).
